--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -775,139 +775,6 @@ section.lazy-placeholder:after {
 .cid-sn3LkWJEG6 .card-title {
   text-align: center;
 }
-.cid-sn3LKkLJNV {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
-}
-.cid-sn3LKkLJNV .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-sn3LKkLJNV .container-table {
-  margin: 0 auto;
-}
-.cid-sn3LKkLJNV .scroll {
-  overflow-x: auto;
-  padding: 0;
-}
-.cid-sn3LKkLJNV .dataTables_wrapper {
-  display: block;
-}
-.cid-sn3LKkLJNV .dataTables_wrapper .search {
-  margin-bottom: .5rem;
-}
-.cid-sn3LKkLJNV .dataTables_wrapper .table {
-  overflow-x: auto;
-}
-.cid-sn3LKkLJNV table {
-  width: 100% !important;
-  margin-top: 6px;
-  border: 1px solid #b2ccd2;
-  margin-bottom: 0;
-}
-.cid-sn3LKkLJNV table th {
-  border-top: none;
-  transition: all .2s;
-  border-bottom: none;
-}
-.cid-sn3LKkLJNV table th:hover {
-  background: #b2ccd2;
-  color: #000000;
-}
-.cid-sn3LKkLJNV table td {
-  border-top: 1px solid #b2ccd2;
-}
-.cid-sn3LKkLJNV table.table {
-  background: #232323;
-}
-.cid-sn3LKkLJNV .dataTables_filter {
-  text-align: right;
-  margin-bottom: .5rem;
-}
-.cid-sn3LKkLJNV .dataTables_filter label {
-  display: inline;
-  white-space: normal !important;
-}
-.cid-sn3LKkLJNV .dataTables_filter input {
-  display: inline;
-  width: auto;
-  margin-left: .5rem;
-  border-radius: 100px;
-  padding-left: 1rem;
-}
-.cid-sn3LKkLJNV .dataTables_info {
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  white-space: normal !important;
-}
-@media (max-width: 992px) {
-  .cid-sn3LKkLJNV .dataTables_filter {
-    text-align: center;
-  }
-}
-@media (max-width: 350px) {
-  .cid-sn3LKkLJNV .dataTables_filter {
-    text-align: center;
-  }
-  .cid-sn3LKkLJNV .dataTables_filter input {
-    width: 100% !important;
-    margin-left: 0 !important;
-  }
-}
-.cid-sn3LKkLJNV .body-item {
-  color: #cccccc;
-}
-.cid-sn3LKkLJNV .head-item {
-  color: #ffffff;
-}
-.cid-sn40cSIoX8 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-sn40cSIoX8 .pricing {
-  padding: 3.3rem;
-  color: #767676;
-  background-color: #fff;
-}
-@media (max-width: 767px) {
-  .cid-sn40cSIoX8 .pricing {
-    padding: 1.5rem;
-  }
-}
-.cid-sn40cSIoX8 .plan-header,
-.cid-sn40cSIoX8 .plan-body {
-  background-color: #fff;
-}
-.cid-sn40cSIoX8 .plan-title {
-  margin-top: 1.4rem;
-  text-align: center;
-  color: #7f1933;
-}
-.cid-sn40cSIoX8 .price-figure {
-  font-weight: 700;
-  color: #232323;
-  text-align: center;
-}
-@media (max-width: 550px) {
-  .cid-sn40cSIoX8 .price-figure {
-    font-size: 4.25rem;
-  }
-}
-.cid-sn40cSIoX8 .price-value {
-  font-weight: 700;
-  vertical-align: top;
-}
-.cid-sn40cSIoX8 hr {
-  margin: 2rem 0;
-}
-.cid-sn40cSIoX8 P {
-  text-align: center;
-  color: #232323;
-}
-.cid-sn40cSIoX8 .plan-title P {
-  text-align: center;
-}
 .cid-spvfg8CJ34 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1006,6 +873,54 @@ section.lazy-placeholder:after {
     height: auto !important;
   }
 }
+.cid-sn40cSIoX8 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-sn40cSIoX8 .pricing {
+  padding: 3.3rem;
+  color: #767676;
+  background-color: #fff;
+}
+@media (max-width: 767px) {
+  .cid-sn40cSIoX8 .pricing {
+    padding: 1.5rem;
+  }
+}
+.cid-sn40cSIoX8 .plan-header,
+.cid-sn40cSIoX8 .plan-body {
+  background-color: #fff;
+}
+.cid-sn40cSIoX8 .plan-title {
+  margin-top: 1.4rem;
+  text-align: center;
+  color: #7f1933;
+}
+.cid-sn40cSIoX8 .price-figure {
+  font-weight: 700;
+  color: #232323;
+  text-align: center;
+}
+@media (max-width: 550px) {
+  .cid-sn40cSIoX8 .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-sn40cSIoX8 .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+.cid-sn40cSIoX8 hr {
+  margin: 2rem 0;
+}
+.cid-sn40cSIoX8 P {
+  text-align: center;
+  color: #232323;
+}
+.cid-sn40cSIoX8 .plan-title P {
+  text-align: center;
+}
 .cid-sn3PleT5r4 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1073,8 +988,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-sn3LHF8ibc {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 45px;
+  padding-bottom: 30px;
   background-color: #232323;
 }
 @media (max-width: 767px) {
@@ -6796,6 +6711,598 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 767px) {
   .cid-spvm0N0tHk .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sNlAVo08bW {
+  background-image: url("../../../assets/images/mbr-1920x1281.jpg");
+}
+.cid-sNlAVo08bW .icons-media-container {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-sNlAVo08bW .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-sNlAVo08bW .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-sNlAVo08bW .mbr-text {
+  color: #ffffff;
+}
+.cid-sNlAVo08bW .card {
+  padding-bottom: 1.5rem;
+}
+.cid-sNlAVqyg0g {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-sNlAVqyg0g .mbr-section-subtitle,
+.cid-sNlAVqyg0g .mbr-text {
+  color: #767676;
+}
+.cid-sNlAVqyg0g .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-sNlAVqyg0g .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-sNlAVqyg0g .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-sNlAVqyg0g .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-sNlAVqyg0g .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-sNlAVqyg0g .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-sNlAVqyg0g .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-sNlAVqyg0g .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-sNlAVqyg0g .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-sNlAVrj7Po {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #dbd4b8, #465052);
+}
+.cid-sNlAVrj7Po .main {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-sNlAVrj7Po .main .mbr-section-btn {
+  text-align: right;
+}
+.cid-sNlAVrj7Po .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-sNlAVrj7Po H3 {
+  text-align: center;
+}
+.cid-sNlAVrGZXy .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-sNlAVrGZXy .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-sNlAVrGZXy a {
+  font-style: normal;
+}
+.cid-sNlAVrGZXy .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-sNlAVrGZXy .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-sNlAVrGZXy .nav-item:focus,
+.cid-sNlAVrGZXy .nav-link:focus {
+  outline: none;
+}
+.cid-sNlAVrGZXy .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sNlAVrGZXy .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-sNlAVrGZXy .menu-logo {
+  margin-right: auto;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-sNlAVrGZXy .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-sNlAVrGZXy .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-sNlAVrGZXy .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-sNlAVrGZXy .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-sNlAVrGZXy .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-sNlAVrGZXy .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-sNlAVrGZXy .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-sNlAVrGZXy .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sNlAVrGZXy .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-sNlAVrGZXy .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-sNlAVrGZXy .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-sNlAVrGZXy .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-sNlAVrGZXy button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-sNlAVrGZXy button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-sNlAVrGZXy button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-sNlAVrGZXy button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-sNlAVrGZXy button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sNlAVrGZXy button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sNlAVrGZXy button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-sNlAVrGZXy nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sNlAVrGZXy nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-sNlAVrGZXy nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-sNlAVrGZXy nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sNlAVrGZXy .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sNlAVrGZXy .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.collapsing,
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-sNlAVrGZXy .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-sNlAVrGZXy .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
+.cid-sNlAVrGZXy .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-sNlAVrGZXy .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sNlAVrGZXy .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-sNlAVrGZXy .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-sNlAVrGZXy .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-sNlAVrGZXy .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-sNlAVrGZXy.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sNlAVrGZXy img {
+    height: 3.8rem !important;
+  }
+  .cid-sNlAVrGZXy .btn {
+    display: -webkit-flex;
+  }
+  .cid-sNlAVrGZXy button.navbar-toggler {
+    display: block;
+  }
+  .cid-sNlAVrGZXy .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-sNlAVrGZXy .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse.collapsing,
+  .cid-sNlAVrGZXy .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse.collapsing .navbar-nav,
+  .cid-sNlAVrGZXy .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-sNlAVrGZXy .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse.collapsing .navbar-buttons,
+  .cid-sNlAVrGZXy .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-sNlAVrGZXy .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-sNlAVrGZXy .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sNlAVrGZXy .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-sNlAVrGZXy .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-sNlAVrGZXy .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-sNlAVrGZXy .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-sNlAVrGZXy .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-sNlAVrGZXy .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-sNlAVrGZXy .nav-link:hover,
+.cid-sNlAVrGZXy .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-sNlAVs9m7G {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #232323;
+}
+@media (max-width: 767px) {
+  .cid-sNlAVs9m7G .content {
+    text-align: center;
+  }
+  .cid-sNlAVs9m7G .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sNlAVs9m7G .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sNlAVs9m7G .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-sNlAVs9m7G .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-sNlAVs9m7G .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-sNlAVs9m7G .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-sNlAVs9m7G .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-sNlAVs9m7G .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-sNlAVs9m7G .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sNlAVs9m7G .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sNlAVs9m7G .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sNlAVs9m7G .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
